feat: adicionado rota de atualização de contato + teste
